--- a/main.yml
+++ b/main.yml
@@ -9,6 +9,7 @@
   pre_tasks:
     - import_tasks: tasks/test-setup.yml
       when: deploy_target != 'pi'
+      tags: ['always']
 
     - name: Ensure dependencies are installed.
       apt:
@@ -65,8 +66,11 @@
     - import_tasks: tasks/k8s-services.yml
       tags: ['kubernetes']
 
+    - import_tasks: tasks/k8s-nfs.yml
+      tags: ['kubernetes', 'nfs']
+
     - import_tasks: tasks/k8s-docker-registry.yml
-      tags: ['kubernetes', 'docker']
+      tags: ['kubernetes', 'docker', 'registry']
 
     - import_tasks: tasks/k8s-drupal8.yml
       tags: ['drupal']
