--- a/vars/main.yml
+++ b/vars/main.yml
@@ -61,11 +61,12 @@ mysql_container_image: hypriot/rpi-mysql:5.5
 # Image to use for the metrics-server deployment.
 metrics_server_image: gcr.io/google_containers/metrics-server-arm:v0.3.1
 
+# Image to use for nfs-client deployment.
+nfs_client_image: quay.io/external_storage/nfs-client-provisioner-arm:latest
+
 # NFS configuration.
 nfs_share_dir: /srv/nfs
 nfs_exports: { "/srv/nfs *(rw,sync,no_root_squash,no_subtree_check)" }
 # nfs_mount_dir: /mnt/nfs # defined in global vars file.
 nfs_extra_dirs:
-  - docker-registry
-  - drupal8-files
-  - drupal8-db
+  - k8s
