--- a/k8s-manifests/drupal8/drupal/manifest.yml
+++ b/k8s-manifests/drupal8/drupal/manifest.yml
@@ -4,7 +4,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: drupal8-files-pvc
-  namespace: drupal8
+  namespace: {{ manifest_namespace }}
   labels:
     app: drupal8
   annotations:
@@ -22,7 +22,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: drupal8
-  namespace: drupal8
+  namespace: {{ manifest_namespace }}
   labels:
     app: drupal8
 spec:
@@ -73,7 +73,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: drupal8
-  namespace: drupal8
+  namespace: {{ manifest_namespace }}
   labels:
     app: drupal8
 spec:
@@ -90,7 +90,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: drupal8-ingress
-  namespace: drupal8
+  namespace: {{ manifest_namespace }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -109,7 +109,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: drupal8
-  namespace: drupal8
+  namespace: {{ manifest_namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
