--- a/k8s-manifests/nfs/deployment/manifest.yml
+++ b/k8s-manifests/nfs/deployment/manifest.yml
@@ -1,13 +1,10 @@
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: nfs-client-provisioner
+# NFS Deployment.
 ---
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: nfs-client-provisioner
+  namespace: default
 spec:
   replicas: 1
   strategy:
@@ -36,3 +33,13 @@ spec:
           nfs:
             server: {{ kubernetes_master_ip }}
             path: {{ nfs_share_dir }}
+
+# NFS StorageClass.
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: pidramble-nfs
+provisioner: pidramble.com/nfs # must match deployment's PROVISIONER_NAME env var
+parameters:
+  archiveOnDelete: "false"
