--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
-- src: geerlingguy.firewall
 - src: geerlingguy.security
 - src: geerlingguy.swap
 - src: geerlingguy.nfs
 - src: geerlingguy.pip
 - src: geerlingguy.kubernetes
+- src: geerlingguy.k8s_manifests
