Issue #131: Don't overwrite the global ~/.kube/config file.

--- a/tasks/k8s-config.yml
+++ b/tasks/k8s-config.yml
@@ -10,7 +10,7 @@
 - name: Copy K8s config file from master to local.
   fetch:
     src: ~/.kube/config
-    dest: "{{ k8s_kubeconfig }}"
+    dest: "~/.kube/config-dramble-{{ deploy_target }}"
     flat: true
   delegate_to: "{{ groups.dramble[0] }}"
   run_once: true
