--- a/tasks/test-setup.yml
+++ b/tasks/test-setup.yml
@@ -11,7 +11,7 @@
 - name: Override vars for non-ARM test environments.
   set_fact:
     docker_version: 5:18.09.0~3-0~debian-stretch
-    drupal8_docker_image: geerlingguy/drupal:latest
+    drupal_docker_image: geerlingguy/drupal:latest
     mysql_container_image: 'mysql:5.7'
     docker_registry_image: registry:2
     metrics_server_image: k8s.gcr.io/metrics-server-amd64:v0.3.1
