Issue #111: Add registry to /etc/hosts, add needed variable to Drupal ConfigMap.

--- a/k8s-manifests/drupal/drupal/manifest.yml
+++ b/k8s-manifests/drupal/drupal/manifest.yml
@@ -5,11 +5,12 @@ metadata:
   name: drupal-config
   namespace: {{ manifest_namespace }}
 data:
-  DRUPAL_DATABASE_HOST: 'mysql'
+  DRUPAL_DATABASE_HOST: 'mysql.drupal.svc.cluster.local'
   DRUPAL_DATABASE_PORT: '3306'
   DRUPAL_DATABASE_NAME: 'drupal'
   DRUPAL_DATABASE_USERNAME: 'drupal'
   DRUPAL_HASH_SALT: '{{ drupal_hash_salt }}'
+  DRUPAL_DOWNLOAD_IF_NOT_PRESENT: 'false'
 
 # PersistentVolumeClaim for Drupal files.
 ---
