--- a/main.yml
+++ b/main.yml
@@ -59,7 +59,7 @@
     - import_tasks: tasks/led-monitor.yml
       tags: ['leds']
 
-    - import_tasks: tasks/k8s-cert-setup.yml
+    - import_tasks: tasks/k8s-registry-setup.yml
       tags: ['kubernetes']
 
     - import_tasks: tasks/k8s-services.yml
