Issue #111: Allow registry ingress IP to be overridden for testing.

--- a/example.config.yml
+++ b/example.config.yml
@@ -20,4 +20,5 @@ security_sudoers_passwordless:
 # Docker configuration.
 docker_registry_image: vsellier/docker-registry-arm:2.7.0
 docker_registry_domain: registry.pidramble.test
+docker_registry_ingress_host: 'kube3'
 docker_registry_http_secret: fdb19409c851605cd6c46615888d4c0e37858121df7c
