Issue #111: Can't overwrite hosts file in Docker that easy, so skip it.

--- a/tasks/k8s-registry-setup.yml
+++ b/tasks/k8s-registry-setup.yml
@@ -29,6 +29,7 @@
     line: "{{ hostvars[docker_registry_ingress_host].ansible_host }}  {{ docker_registry_domain }}"
     regexp: '.*{{ docker_registry_domain }}$'
     state: present
+  when: deploy_target != 'docker'
 
 - name: Ensure Docker cert store directory exists.
   file:
