--- a/tasks/test-setup.yml
+++ b/tasks/test-setup.yml
@@ -11,12 +11,18 @@
 - name: Override vars for non-ARM test environments.
   set_fact:
     docker_version: 5:18.09.2~3-0~debian-stretch
-    drupal_docker_image: geerlingguy/drupal:latest
     mysql_container_image: 'mysql:5.7'
     docker_registry_image: registry:2
     metrics_server_image: k8s.gcr.io/metrics-server-amd64:v0.3.1
     nfs_client_image: quay.io/external_storage/nfs-client-provisioner:latest
   when: deploy_target != 'pi'
+
+- name: Override the drupal_docker_image if it's at its default.
+  set_fact:
+    drupal_docker_image: geerlingguy/drupal:latest
+  when:
+    - deploy_target != 'pi'
+    - drupal_docker_image == 'geerlingguy/drupal:latest-arm32v7'
 
 - name: Override vars for single-node Docker environment.
   set_fact:
