Issue #145: Set imagePullPolicy: IfNotPresent for air-gapped usage.

--- a/k8s-manifests/drupal/drupal/manifest.yml
+++ b/k8s-manifests/drupal/drupal/manifest.yml
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
         - image: {{ drupal_docker_image }}
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: drupal
           envFrom:
           - configMapRef:
