--- a/k8s-manifests/drupal/mysql/manifest.yml
+++ b/k8s-manifests/drupal/mysql/manifest.yml
@@ -61,6 +61,7 @@ spec:
     spec:
       containers:
       - image: {{ mysql_container_image }}
+        imagePullPolicy: IfNotPresent
         name: mysql
         envFrom:
         - configMapRef:
