--- a/vars/main.yml
+++ b/vars/main.yml
@@ -44,6 +44,9 @@ swap_file_path: /dev/mapper/packer--debian--9--amd64--vg-swap_1
 # See: https://github.com/docker-library/mysql/issues/318
 mysql_container_image: hypriot/rpi-mysql:5.5
 
+# Image to use for the traefik-ingress-controller daemonset.
+traefik_image: traefik:1.7
+
 # Image to use for the metrics-server deployment.
 metrics_server_image: gcr.io/google_containers/metrics-server-arm:v0.3.1
 
