Issue #145: Set imagePullPolicy for docker-registry and nfs deployments.

--- a/k8s-manifests/docker-registry/manifest.yml
+++ b/k8s-manifests/docker-registry/manifest.yml
@@ -35,6 +35,7 @@ spec:
     spec:
       containers:
         - name: docker-registry
+          imagePullPolicy: IfNotPresent
           image: {{ docker_registry_image }}
           env:
             - name: REGISTRY_HTTP_SECRET
