Fixes #146: Switch to geerlingguy.docker_arm Galaxy role.

--- a/main.yml
+++ b/main.yml
@@ -42,7 +42,7 @@
     - role: geerlingguy.pip
       tags: ['pip', 'docker']
 
-    - role: docker-arm
+    - role: geerlingguy.docker_arm
       tags: ['docker']
 
     - role: geerlingguy.kubernetes
