--- a/k8s-manifests/drupal/drupal/manifest.yml
+++ b/k8s-manifests/drupal/drupal/manifest.yml
@@ -83,6 +83,15 @@ spec:
         - name: drupal-files
           persistentVolumeClaim:
             claimName: drupal-files
+      tolerations:
+      - effect: NoExecute
+        key: node.kubernetes.io/not-ready
+        operator: Exists
+        tolerationSeconds: {{ kubernetes_toleration_not_ready }}
+      - effect: NoExecute
+        key: node.kubernetes.io/unreachable
+        operator: Exists
+        tolerationSeconds: {{ kubernetes_toleration_not_ready }}
 
 # Drupal Service definition.
 ---
